--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pek",
+  "author": {"name": "Robert Kieffer", "email": "robert@broofa.com"},
   "version": "0.0.1",
   "description": "A modern data model for UI rendering",
   "license": "MIT",
