--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mocha": "latest"
   },
   "scripts": {
-    "prepublish": "node build/readme.js",
-    "test": "mocha test"
+    "prepublish": "node src/readme.js",
+    "test": "mocha src/test"
   }
 }
