--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "pek",
-  "author": {"name": "Robert Kieffer", "email": "robert@broofa.com"},
-  "version": "0.0.3",
+  "author": {
+    "name": "Robert Kieffer",
+    "email": "robert@broofa.com"
+  },
+  "version": "0.0.4",
   "description": "A modern data model for UI rendering",
   "license": "MIT",
   "homepage": "https://github.com/broofa/pek",
@@ -9,13 +12,13 @@
     "type": "git",
     "url": "https://github.com/broofa/pek.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "mocha": "latest"
+    "mocha": "3.4.2",
+    "runmd": "0.1.3"
   },
   "scripts": {
-    "prepublish": "node src/readme.js",
+    "prepare": "runmd src/README_js.md --output README.md",
     "test": "mocha src/test"
   }
 }
