--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {},
   "devDependencies": {
     "mocha": "3.4.2",
-    "runmd": "0.1.8"
+    "runmd": "file:../runmd"
   },
   "scripts": {
     "md": "runmd --watch --output README.md src/README_js.md",
